--- a/static/css/home.css
+++ b/static/css/home.css
@@ -19,7 +19,7 @@ main {
 .post {
     min-width: 15%;
     max-width: 23%;
-    overflow-y: hidden;
+    overflow: hidden;
     max-height: 350px;
     margin-bottom: 10px;
 }
@@ -29,6 +29,7 @@ main {
 }
 
 .post h1 {
+    max-width: 100%;
     font-size: 16pt;
     margin: 0;
     text-align: center;
@@ -53,7 +54,7 @@ main {
 
 .noimg-post {
     height: 100%;
-    width: 100%;
+    width: auto;
     display: flex; display: -webkit-flex; display: -ms-flexbox;
     flex-direction: column; -ms-flex-direction: column;
     justify-content: center;
@@ -137,7 +138,7 @@ main {
     }
     .post {
         max-width: none; width: 100%;
-        margin-bottom: 10px;
+        margin-bottom: 80px;
     }
     .post h1 {
         font-size: 6vw;
